--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
   </head>
-  <body class="bg-zinc-950 mx-96 my-auto">
+  <body class="bg-zinc-950 md:mx-96 md:my-auto">
     <app-root></app-root>
   </body>
 </html>
